--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "google-apis": "GoogleWebComponents/google-apis#^1.0.0"
-  },
-  "devDependencies": {
+    "google-apis": "GoogleWebComponents/google-apis#^1.0.0",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
   }
 }
