--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,14 @@
     "polymer": "Polymer/polymer#^1.0.0",
     "google-apis": "GoogleWebComponents/google-apis#^1.0.0",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "hydrolysis": "Polymer/hydrolysis#1.12"
+    "iron-ajax": "PolymerElements/iron-ajax#^1.0.0"
+  },
+  "devDependencies": {
+    "google-signin": "GoogleWebComponents/google-signin#^1.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.0",
+    "paper-material": "PolymerElements/paper-material#^1.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0"
   }
 }
