--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
     "paper-button": "PolymerElements/paper-button#^1.0.0",
     "paper-material": "PolymerElements/paper-material#^1.0.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
+    "paper-input": "PolymerElements/paper-input#~1.0.12"
   }
 }
