--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "google-apis": "GoogleWebComponents/google-apis#^1.0.1",
+    "google-apis": "GoogleWebComponents/google-apis#^1.0.0",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-ajax": "PolymerElements/iron-ajax#^1.0.0"
   },
@@ -36,6 +36,7 @@
     "paper-button": "PolymerElements/paper-button#^1.0.0",
     "paper-material": "PolymerElements/paper-material#^1.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
-    "paper-input": "PolymerElements/paper-input#~1.0.12"
+    "paper-input": "PolymerElements/paper-input#^1.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^4.0.0"
   }
 }
