--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "discovery-api-elements",
-  "version": "0.4.5",
+  "version": "0.5.0",
   "authors": [
     "Gerwin Sturm <scarygami@gmail.com>"
   ],
-  "description": "Automatic Polymer element to access Discovery-based APIs",
+  "description": "Automatic Polymer elements to access Discovery-based APIs",
   "main": "discovery-api-elements.html",
   "keywords": [
     "Discovery",
