Add missing dev dependency

--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "paper-material": "PolymerElements/paper-material#^1.0.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
     "paper-input": "PolymerElements/paper-input#^1.0.0",
-    "web-component-tester": "Polymer/web-component-tester#^4.0.0"
+    "web-component-tester": "Polymer/web-component-tester#^4.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0"
   }
 }
